# JackyZephyrDemo

./: DOCKER_HOWTO.md  ZEPHYR_PROJECT_SETUP.md  build.sh  build_docker.sh  fetch_zephyr.sh  flash.sh  run_docker.sh
app/: CMakeLists.txt  prj.conf
app/src/: main.c
docker/: Dockerfile
